--- a/styles.css
+++ b/styles.css
@@ -3,4 +3,11 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    background: url(header.jpg) no-repeat center center fixed;
+    background-size: cover;
+}
+
+h1{
+    font-size: 3rem;
 }
