--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,17 @@ body {
 h1{
     font-size: 3rem;
 }
+
+/*class*/
+.btn {
+    font-weight: 700;
+    border-radius: 300px;
+    text-transform: uppercase;
+}
+
+
+
+
+.btn-xl {
+    padding: 1rem 2rem;
+}
