--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@ body {
     height: 100%;
     font-family: 'Montserrat', sans-serif;
     margin: 0;
-    background: url(header.jpg) no-repeat center center fixed;
+    background: url(../images/header.jpg) no-repeat center center fixed;
     background-size: cover;
 }
 
